--- a/app/src/main/res/drawable/chat_bubble_outgoing.xml
+++ b/app/src/main/res/drawable/chat_bubble_outgoing.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Shadow layer for triangle -->
+    <!-- Shadow layer -->
     <item>
         <rotate
             android:fromDegrees="45"
@@ -8,7 +8,7 @@
             android:pivotY="0%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <solid android:color="#40000000" />
+                <solid android:color="#80000000" />
                 <size android:width="18dp" android:height="18dp" />
             </shape>
         </rotate>
@@ -17,7 +17,7 @@
     <!-- Shadow for main bubble -->
     <item android:right="8dp" android:top="1dp" android:left="1dp" android:bottom="3dp">
         <shape android:shape="rectangle">
-            <solid android:color="#40000000" />
+            <solid android:color="#80000000" />
             <corners android:radius="12dp" />
         </shape>
     </item>
@@ -31,8 +31,8 @@
             android:toDegrees="0">
             <shape android:shape="rectangle">
                 <gradient
-                    android:startColor="#3D62E0"
-                    android:endColor="#456FFF"
+                    android:startColor="#8EEFE2"
+                    android:endColor="#AFF3D3"
                     android:angle="135" />
                 <size android:width="16dp" android:height="16dp" />
             </shape>
@@ -43,12 +43,11 @@
     <item android:right="10dp" android:top="1dp" android:left="1dp" android:bottom="3dp">
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="#456FFF"
-                android:centerColor="#5A80FF"
-                android:endColor="#6B8DFF"
+                android:startColor="#8EEFBB"
+                android:endColor="#AFF3D3"
                 android:angle="135" />
             <corners android:radius="12dp" />
-            <stroke android:color="#3D62E0" android:width="1dp" />
+            <stroke android:color="#7ADEA1" android:width="1dp" />
         </shape>
     </item>
 </layer-list>
