--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -1,18 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <gradient
-                android:angle="90"
-                android:startColor="#8E2DE2"
-                android:endColor="#FF5F6D"
-                android:type="linear"/>
-            <corners
-                android:topLeftRadius="50dp"
-                android:topRightRadius="50dp"
-                android:bottomLeftRadius="50dp"
-                android:bottomRightRadius="50dp"
-                />
-        </shape>
-    </item>
-</layer-list>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient
+        android:angle="45"
+        android:startColor="#21B03B"
+        android:endColor="#6DED84"
+        android:type="linear" />
+</shape>
