--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,4 +73,28 @@
     </style>
 
 
+
+
+
+    <style name="TextAppearance.MaterialComponents.HeadlineSmall" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="android:textSize">16sp</item>
+        <item name="android:letterSpacing">0.009375</item>
+        <item name="android:textColor">?attr/colorOnSurface</item>
+    </style>
+
+    <style name="TextAppearance.MaterialComponents.BodyMedium" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">0.0125</item>
+        <item name="android:textColor">?attr/colorOnSurface</item>
+    </style>
+
+
+    <style name="Widget.Material3.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:textColor">@color/green</item>
+        <item name="android:padding">12dp</item>
+        <item name="backgroundTint">@null</item>
+        <item name="rippleColor">?attr/colorControlHighlight</item>
+        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Button</item>
+    </style>
+
 </resources>
