--- a/app/src/main/res/layout/activity_aichatbot.xml
+++ b/app/src/main/res/layout/activity_aichatbot.xml
@@ -32,9 +32,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:hint="Enter Your Prompt"
-            app:boxStrokeColor="#757575"
+
             app:boxCornerRadiusTopStart="16dp"
             app:boxCornerRadiusTopEnd="16dp"
+            app:boxStrokeColor="#1EB980"
+            app:endIconTint="#1EB980"
+            app:hintTextColor="#1EB980"
             app:boxCornerRadiusBottomStart="16dp"
             app:boxCornerRadiusBottomEnd="16dp">
 
