--- a/app/src/main/res/layout/activity_bid.xml
+++ b/app/src/main/res/layout/activity_bid.xml
@@ -76,6 +76,9 @@
                     android:hint="Location"
                     android:layout_marginTop="8dp"
 
+                    app:boxStrokeColor="#1EB980"
+                    app:endIconTint="#1EB980"
+                    app:hintTextColor="#1EB980"
                     app:boxCornerRadiusBottomEnd="16dp"
                     app:boxCornerRadiusBottomStart="16dp"
                     app:boxCornerRadiusTopEnd="16dp"
@@ -201,7 +204,7 @@
             android:layout_height="wrap_content"
             android:text="Submit Proposal"
             android:textColor="@android:color/white"
-            android:backgroundTint="#056D05"
+            android:backgroundTint="@color/green"
             app:cornerRadius="24dp"
             android:layout_margin="16dp"
             app:layout_constraintTop_toBottomOf="@id/cardView"
