--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -122,12 +122,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:hint="Last name"
+                app:boxStrokeColor="#1EB980"
+                app:endIconTint="#1EB980"
+                app:hintTextColor="#1EB980"
                 app:boxCornerRadiusBottomEnd="16dp"
                 app:boxCornerRadiusBottomStart="16dp"
                 app:boxCornerRadiusTopEnd="16dp"
                 app:boxCornerRadiusTopStart="16dp"
-                app:boxStrokeColor="#1EB980"
-                app:hintTextColor="#1EB980"
                 app:layout_constraintTop_toBottomOf="@id/first_name_layout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
